iki edit pilih kota a

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<div id="middle" class="heading">
 			  <h2>Ketahui Jadwal Sholatmu Click Kotak Di bawah ini</h2>
 			</div>
-			  <h1 class="pilih">Pilih Kota</h1>
+			  <h1 class="pilih">Pilih Kotaa</h1>
 	
 			  <nav>
 			  
